<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.longdo.mjpegviewer.MjpegView
        android:background="?colorPrimaryDark"
        android:id="@+id/mjpegViewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/infoBar"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:background="?colorPrimaryDark"
        android:id="@+id/infoBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomBar"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infoText"
            android:padding="10dp"
            android:textSize="20sp"
            style="?textAllCaps"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/midBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomBar"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ipAddressInputHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hostEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/portFieldHint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/portEdit"
                android:inputType="number"
                android:digits="0123456789"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:text="@string/updateButtonText"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"

        android:paddingVertical="8dp">


        <Button
            android:id="@+id/buttonUseLocalhost"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_localhost" />

        <Button
            android:id="@+id/buttonUseServer1"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_server_1" />

        <Button
            android:id="@+id/buttonUseServer2"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_server_2" />
    </LinearLayout>
</RelativeLayout>